tests/NormalTests/paczka1/fuzzy1/77560093.err
Error in line 1: 8fRsC S677 0,7
Error in line 7: aZNpLF1 S677 68,1
Error in line 11: k1fSNC S493 20,1
Error in line 18: aZNpLF1 S6   2 ,4
